Fix white space %20 in url

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,12 +82,11 @@ body {
 
   font-size: 13px;
   font-weight: 450;
-  // line-height: 1.3;
 }
 
 .reset-btn {
   width: 82px;
-  height: 25px;
+  height: 28px;
   color: #e7ff20;
   background-color: #7999a9;
   font-weight: 450;
